Created Square component used in Board, have Board pass down a prop to update the Squares

--- a/tic_tac_toe/src/styles.css
+++ b/tic_tac_toe/src/styles.css
@@ -72,6 +72,7 @@ body {
 }
 
 .board-row:after {
+  /*Note: After selecter in css is used to render ui elements after all other elements, in this case it will create a row, then called again to make another row underneath */
   clear: both;
   content: "";
   display: table;
